<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/display"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h.mid.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl.v.button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.button"
        app:layout_constraintEnd_toStartOf="@+id/h.mid.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl.v.button" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/h.mid.1"
        app:layout_constraintTop_toTopOf="@+id/gl.v.button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl.v.switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <Switch
        android:id="@+id/sw1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/sw1"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl.v.switch" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl.v.pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <ProgressBar
        android:id="@+id/pb1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.pb"
        app:layout_constraintEnd_toStartOf="@+id/h.mid.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl.v.pb" />

    <ProgressBar
        android:id="@+id/pb2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.pb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/h.mid.1"
        app:layout_constraintTop_toTopOf="@+id/gl.v.pb" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl.v.pb.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <ProgressBar
        android:id="@+id/pb3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:indeterminate="false"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.pb.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl.v.pb.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl.v.pb.input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <EditText
        android:id="@+id/pb.input"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/pbinput"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.pb.input"
        app:layout_constraintEnd_toStartOf="@+id/h.mid.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl.v.pb.input" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pbbtn"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.pb.input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/h.mid.1"
        app:layout_constraintTop_toTopOf="@+id/gl.v.pb.input" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl.v.logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <RadioGroup
        android:id="@+id/rg.logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.logo"
        app:layout_constraintEnd_toStartOf="@+id/h.mid.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl.v.logo">

        <RadioButton
            android:id="@+id/radio.android"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/androidlogon" />

        <RadioButton
            android:id="@+id/radio.apple"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/applelogo" />
    </RadioGroup>

    <ImageView
        android:id="@+id/iv.logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="@+id/h.mid.1"
        app:layout_constraintTop_toTopOf="@+id/gl.v.logo"
        app:layout_constraintVertical_bias="0.512"
        app:srcCompat="@drawable/android" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl.v.seek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:indeterminate="false"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.seek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl.v.seek" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl.v.cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <CheckBox
        android:id="@+id/cb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb3"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.cb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/cb2"
        app:layout_constraintStart_toStartOf="@+id/h.mid.1"
        app:layout_constraintTop_toTopOf="@+id/gl.v.cb" />

    <CheckBox
        android:id="@+id/cb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb2"
        app:layout_constraintBottom_toBottomOf="@+id/cb3"
        app:layout_constraintEnd_toStartOf="@+id/cb3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb1"
        app:layout_constraintTop_toTopOf="@+id/cb1" />

    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb1"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.cb"
        app:layout_constraintEnd_toStartOf="@+id/cb2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl.v.cb" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl.v.start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/starcontent"
        app:layout_constraintBottom_toTopOf="@+id/gl.v.start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl.v.start" />

</androidx.constraintlayout.widget.ConstraintLayout>